# datalogger

./: Cargo.toml  README.md  debug.gdb  flake.nix  memory.x  openocd.cfg
.cargo/: config  config.toml
hardware/: Datenlogger.kicad_pcb  Datenlogger.kicad_prl  Datenlogger.kicad_pro  Datenlogger.kicad_sch  Spannungsversorgung.kicad_sch  fp-lib-table  isowandler.kicad_sch  noniso.kicad_sch  sym-lib-table  untitled.kicad_sch
src/: avg.rs  led.rs  main.rs  sdcard.rs
