[package]
name = "datenlogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#panic-halt="0.2"
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
embedded-hal-bus = "0.1.0"
embedded-sdmmc = "0.6"
serde = {version="1.0",default-features=false,features=["derive"]}
serde-csv-core = "0.3.1"

[dependencies.stm32f1xx-hal]
version = "0.10"
features = ["rt","stm32f103"]

[profile.dev]
codegen-units=1
opt-level="s"

[profile.release]
codegen-units= 1
lto = true
opt-level="z"
panic= 'abort'
debug = 0
strip = true
overflow-checks = false
